# streamconv

./: .gitignore  LICENSE  README.md  TODO  TODO.md  stack.yaml  streamconv.cabal  stylish-haskell.yaml
src/: Args.hs  Classes.hs  Constants.hs  Instances.hs  Main.hs  Parsers.hs  Producers.hs  Run.hs  Sinks.hs  Sources.hs  Transformers.hs  Types.hs  Utils.hs
