name:                streamconv
version:             0.1.0.0
-- synopsis:
-- description:
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Martin Buck
maintainer:          buckmartin@buckmartin.de
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable streamconv
  main-is:             Main.hs
  other-modules:       Types
                     , Classes
                     , Instances
                     , Parsers
                     , Sources
                     , Transformers
                     , Sinks
                     , Utils
                     , Args
                     , Run
                     , Constants
  -- other-extensions:
  build-depends:       base
                     , conduit
                     , conduit-extra
                     , bytestring
                     , text
                     , attoparsec
                     , binary
                     , optparse-applicative
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror
