name:                streamconv
version:             0.2.0.0
license-file:        LICENSE
author:              Martin Buck
maintainer:          buckmartin@buckmartin.de
build-type:          Simple
cabal-version:       >=1.10

executable streamconv
  main-is:             Main.hs
  other-modules:       Types
                     , Classes
                     , Instances
                     , Parsers
                     , Sources
                     , Transformers
                     , Sinks
                     , Utils
                     , Args
                     , Run
                     , Constants
  build-depends:       base
                     , conduit
                     , conduit-extra
                     , bytestring
                     , text
                     , attoparsec
                     , binary
                     , optparse-applicative
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror
